--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,8 +92,8 @@
                     </ul>
                 </li>
                 <li ng-show="user.logged_in"><a href="" ng-click="user.open_settings_popup()"><i class="fa fa-cog" aria-hidden="true" title="Settings"></i></a></li>
-                <li ng-hide="user.logged_in"><a href="/ng"><i class="fa fa-paint-brush" aria-hidden="true" title="Switch to Angular Material Theme"></i></a></li>
-                <li ng-show="user.logged_in"><a href="" ng-click="user.change_theme('ANGULAR')"><i class="fa fa-paint-brush" aria-hidden="true" title="Switch to Angular Material Theme"></i></a></li>
+                <li ng-hide="user.logged_in"><a href="/md"><i class="fa fa-paint-brush" aria-hidden="true" title="Switch to Material Theme"></i></a></li>
+                <li ng-show="user.logged_in"><a href="" ng-click="user.change_theme('ANGULAR')"><i class="fa fa-paint-brush" aria-hidden="true" title="Switch to Material Theme"></i></a></li>
             </ul>
         </div>
     </div>
@@ -656,7 +656,7 @@
                         <div class="form-group clearfix btn-toolbar">
                             <button type="button" class="btn btn-default pull-right" data-dismiss="modal" ng-click="user.close_settings_popup()">Close</button>
                             <button type="button" class="btn btn-primary pull-right"
-                                   ng-click="user.change_theme('ANGULAR')">Use Angular Material Theme</button>&nbsp;
+                                   ng-click="user.change_theme('ANGULAR')">Use Material Theme</button>&nbsp;
                             <a type="button" class="btn btn-primary pull-right" href="/swagger-ui.html">View Backend API</a>&nbsp;
                         </div>
                     </form>
